--- a/guide.html
+++ b/guide.html
@@ -27,7 +27,7 @@
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item active"><a class="nav-link" href="guide.html">About</a>
+                  <li class="nav-item active"><a class="nav-link" href="guide.html">Guide</a>
                   </li>
                 </ul>
               </div>
@@ -40,10 +40,23 @@
           <div class="pp-about container px-0 pp-section-guide">
             <div class="row mb-2">
               <div class="col-md-9">
-                <h1 class="h4">1. Get link source of image:</h1>        
+                <h1 class="h4">1. Get link source of image</h1>        
               </div>
             </div>
-            <img class="img-fluid pp-about-img" src="images/Asset/Get_link_source_image.png" alt="About Image"/>
+            
+            <video width=100% height=100% controls>
+              <source src="video/Get_link_source_image.webm">
+            </video>
+
+            <div class="row mb-2">
+              <div class="col-md-9">
+                <h1 class="h4">2. Save image</h1>        
+              </div>
+            </div>
+            
+            <video width=100% height=100% controls>
+              <source src="video/Save_image.webm">
+            </video>
   
           </div>
           <div class="pp-section"></div>
