--- a/guide.html
+++ b/guide.html
@@ -14,14 +14,14 @@
     <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/main.css?ver=1.2.0" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/Asset/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico">
   </head>
   <body id="top">
     <div class="page">
       <header>
         <div class="pp-header">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container"><a href="index.html"><img src="images/Asset/favicon.ico" alt="Logo"></a><a class="navbar-brand" href="index.html">&nbsp Images Free</a>
+            <div class="container"><a href="index.html"><img src="asset/favicon.ico" alt="Logo"></a><a class="navbar-brand" href="index.html">&nbsp Images Free</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav ml-auto">
