--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
     }
 
     function gotoPage(page){      
-      if(page == -1){
+      if(page == -1){        
         if(currentPage < numberPage){
+          currentPage = currentPage + 1;
           htmlTag = "";          
-          startItem = currentPage*3;
+          startItem = (currentPage - 1)*3;
           if(currentPage == numberPage){
             endItem = dataOfPage.length;
           }
@@ -207,7 +208,7 @@
           }       
           document.getElementById("contentImage").innerHTML = htmlTag;
           htmlPagination = "";
-          currentPage = currentPage + 1;
+          
           addContentPagination(currentPage);   
         }
         else{
